# TOF-PET

./: .gitignore  CMakeLists.txt  README.md  tof_pet.cc
include/: action.hh  construction.hh  detector.hh  event.hh  generator.hh  physics.hh  run.hh  stepping.hh  trackingaction.hh
macro/: batch_run.mac  vis.mac
src/: action.cc  construction.cc  detector.cc  event.cc  generator.cc  physics.cc  run.cc  stepping.cc  trackingaction.cc
